--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,10 @@
 \maketitle
 
 \section{Introduction}
-c
+
+\begin{equation}
+E = mc^2
+\end{equation}
 \urllink{Overleaf}{https://www.overleaf.com/} is popular online \LaTeX{}
 editor. It can generate PDF files 
 without need to install a local \TeX{} distribution. Unfortunatelly, it doesn't
